round 1/RBROTHERS/error-output.txt
  File "submissions/RBROTHERS/problem4.py", line 1
    /56.Y[U-K90/MO4^*(GT$#
    ^
SyntaxError: invalid syntax
